# Utils

./: .gitignore  CoWBuffer.cpp  CustomDeleters.cpp  SubjectObserver.h  current_time.cpp  diagnostics.h  diamond.cpp  fairalting.cpp  functors.cpp  genericstrings  logging.h  palindromes.cpp  printable_t.cpp  ring_buffer.cpp  staticpoly.cpp  std_quick_files.h  std_string_helper.h  typetraitsdemo.cpp  uncopyable.h
CMake_Template/root/: CMakeLists.txt
CMake_Template/root/app/: CMakeLists.txt
CMake_Template/root/app/include/: util.h
CMake_Template/root/app/src/: app.cpp
CMake_Template/root/app/test/: main.cpp
MFCUtil/: MFCUtil.sln
MFCUtil/MFCUtil/: FileHelper.h  LOGGING.h  MFCUtil.vcxproj  MFCUtil.vcxproj.filters  MSGBOX.h  ReadMe.txt
MakefileProj/: make.bat  makefile
MakefileProj/source/: main.cpp  util.cpp
MyXML/: MyXML.sln
MyXML/MyXML/: MyXML.vcxproj  MyXML.vcxproj.filters  contact.xml  contacts.txt  contacts2.xml  contacts3.xml  main.cpp
UI Binding/: BindableModel.h  CppEvent.h  SubjectObserver.h
Win32MFC/CListCtrlCustomDraw/: ListViewCustomDraw.sln
Win32MFC/CListCtrlCustomDraw/ListViewCustomDraw/: ListCtrlWithCustomDraw.cpp  ListCtrlWithCustomDraw.h  ListViewCustomDraw.aps  ReadMe.txt  (+9 more)
Win32MFC/CListCtrlOwnerDraw/: CListCtrlOwnerDraw.sln
leak_detector/: CMakeLists.txt
leak_detector/include/: get_tid.h  leak_detector.h  print_call_stack.h
leak_detector/src/: leak_detector.cc  print_call_stack.cc
leak_detector/test/: main.cc
sock_cli/: makefile  server.js
sock_cli/include/: httplib.h  httplib.h.old
sock_cli/source/: main.cpp
(+15 files in other folders)
